cdebconf (0.94) UNRELEASED; urgency=low

  [ Attilio Fiandrotti ]
  * Removed no longer needed INFO() lines from the GTK frontend to prevent
    syslog pollution.

 -- Attilio Fiandrotti <fiandro@tiscali.it>  Tue, 27 Dec 2005 23:14:35 +0100

cdebconf (0.93) unstable; urgency=low

  [ Frans Pop ]
  * Add versioned dependency on rootskel-gtk for gtk udeb.

  [ Colin Watson ]
  * Fix question reference leak in question_db_disownall.
  * Copy questions and templates while constructing iterators for them in
    rfc822db; failing to do this meant that it was unsafe to modify the
    database while iterating over it. With any luck this should fix a crash
    while handling the PURGE command, although it will make anything that
    iterates over databases use somewhat more memory.

  [ Updated translations ]
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud

 -- Colin Watson <cjwatson@debian.org>  Tue, 27 Dec 2005 15:28:04 +0000

cdebconf (0.92) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Fixed some GTK frontend minor memory leaks and some widgets alignment.
  * Now also the GTK frontend, like the NEWT frontend, allows the user to go
    back by pressing the ESC key (closes: #339857).
  * Added a button in the main screen that allows the user to take screenshots
    in PNG format.
  * Added a couple of entries in cdebconf-gtk-udeb.templates to localize
    screenshot button and message for the GTK frontend and made it use them.
  * Improved visibility of screenshot popup message and disabled screenshot
    button while progressbar runs.

  [ Frans Pop ]
  * Add Standards-Version: back in; cdebconf also provides regular packages.

  [ Tollef Fog Heen ]
  * Move get_text common function from the text and newt frontend to
    question.h, likewise for convenience macros to question.h
  * Make it possible for frontend modules to chain onto the install
    Makefile rule