@@ -3,8 +3,9 @@ cdebconf (0.94) UNRELEASED; urgency=low
   [ Attilio Fiandrotti ]
   * Removed no longer needed INFO() lines from the GTK frontend to prevent
     syslog pollution.
+  * GTK frontend is now able to display obj->info message (closes: #341054).
 
- -- Attilio Fiandrotti <fiandro@tiscali.it>  Tue, 27 Dec 2005 23:14:35 +0100
+ -- Attilio Fiandrotti <fiandro@tiscali.it>  Mon,  2 Jan 2006 20:37:08 +0100
 
 cdebconf (0.93) unstable; urgency=low
 
